# nanorpc-test

./: CMakeLists.txt  conanfile.py  main.cpp
.github/workflows/: build.yml
cmake/: CodeCoverage.cmake  CompilerWarnings.cmake  Conan.cmake  InterproceduralOptimization.cmake  PreventInSourceBuilds.cmake  ProjectOptions.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake  Tests.cmake
src/: CMakeLists.txt  main.cpp
